--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">CodifyName()</string>
+    <string name="app_name">Name</string>
+    <string name="full_name">CodifyName()</string>
     <string name="action_about">About</string>
     <string name="name_text">Name</string>
     <string name="message_text">Message</string>
@@ -12,6 +13,10 @@
     <string name="title_activity_about">About</string>
     <string name="copy_button">Copy</string>
     <string name="paste_button">Paste</string>
+    <string name="headA_text">CodifyName()</string>
+    <string name="ParaA_text">By Vivek</string>
+    <string name="ParaB_text">Source code available at</string>
+    <string name="ParaC_text">Encode and decode your information with your name as the secret key</string>
 
     <string name="fa_glass">&#xf000;</string>
     <string name="fa_music">&#xf001;</string>
